--- a/indexx.html
+++ b/indexx.html
@@ -7,13 +7,13 @@
     <img src="RMIT_banner.png" alt="RMIT Banner">
     <img src="tree-736885__480.jpg" alt="">
     <h1> RMIT UNIVERSITY</h1>
-    <p>Tumhari maa ki efwjrd;ouhfgwuohe' ehgwirdgIEGF4OEFUHCuohFEG CSEFKHSLCAOUYWO CUDSWIU</p>
+    <p>efwjrd;ouhfgwuohe' ehgwirdgIEGF4OEFUHCuohFEG CSEFKHSLCAOUYWO CUDSWIU</p>
     <ul>
         <li>ch</li>
         <li>weofwe</li>
         <li>duohfwouwehw</li>
     </ul>
-    <h2>Teri bhi maa ki</h2>
+    <h2>Te</h2>
     <h3>Image</h3>
     <img src="RMIT_student.jpeg" height="500" width="1000" alt=""> 
 </body>
